--- a/layout.css
+++ b/layout.css
@@ -79,7 +79,7 @@ ul {
     height: 100vw;
     background-image: ;
     background-repeat: no-repeat;
-    cursor: url(img_byg/turd%20copy.png), auto;
+
     position: relative;
 }
 
@@ -89,15 +89,18 @@ ul {
     display: flex;
     position: absolute;
     height: 100%;
+    justify-content: left;
+
 }
 
 .scrum {
     height: 100%;
     width: 10%;
+    text-decoration: none;
+    color: #DC648D;
     border: white;
     border-style: solid;
     border-width: 2vw;
-    cursor: url(img_byg/turd%20copy.png), auto;
 }
 
 /*MOODBOARD*/
