--- a/layout.css
+++ b/layout.css
@@ -41,7 +41,7 @@ a {
 }
 
 nav {
-    width: 100vw;
+    width: 99vw;
     height: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -117,6 +117,7 @@ ul {
 .moodboard {
     color: #DC648D;
     text-decoration: underline;
+    padding-left: 2vw;
 }
 
 /*MOODBOARD*/
@@ -138,7 +139,7 @@ ul {
     background-repeat: no-repeat;
     background-position: center;
     width: 100vw;
-    height: 133.33vw;
+    height: 100vw;
     transform: rotate(90deg);
 }
 
@@ -149,7 +150,7 @@ ul {
     background-repeat: no-repeat;
     background-position: center;
     width: 100vw;
-    height: 133.33vw;
+    height: 100vw;
     transform: rotate(90deg);
 }
 
@@ -159,7 +160,7 @@ ul {
     background-repeat: no-repeat;
     background-position: center;
     width: 100vw;
-    height: 133.33vw;
+    height: 100vw;
     transform: rotate(90deg);
 }
 
@@ -171,7 +172,7 @@ ul {
     background-repeat: no-repeat;
     background-position: center;
     width: 100vw;
-    height: 133.33vw;
+    height: 133.333vw;
 }
 
 #storyboard_tutor {
@@ -180,7 +181,7 @@ ul {
     background-repeat: no-repeat;
     background-position: center;
     width: 100vw;
-    height: 133.33vw;
+    height: 133.333vw;
 }
 
 #storyboard_unite1 {
