--- a/layout.css
+++ b/layout.css
@@ -97,8 +97,8 @@ ul {
     height: 100%;
     width: 10%;
     text-decoration: none;
-    color: #DC648D;
-    border: white;
+    color: white;
+    border: #f29db9;
     border-style: solid;
     border-width: 2vw;
 }
@@ -115,7 +115,7 @@ ul {
 }
 
 .moodboard {
-    color: #DC648D;
+    color: white;
     text-decoration: underline;
     padding-left: 2vw;
 }
