--- a/layout.css
+++ b/layout.css
@@ -36,7 +36,8 @@ p {
 
 #change,
 h2 {
-    color: white;
+    color: black;
+    padding: 2vw;
 }
 
 a {
@@ -82,7 +83,6 @@ ul {
 #scrum_body {
     width: 100vw;
     height: 100vw;
-    background-image: ;
     background-repeat: no-repeat;
 
     position: relative;
@@ -102,7 +102,7 @@ ul {
     height: 100%;
     width: 10%;
     text-decoration: none;
-    color: white;
+    color: black;
     border: white;
     border-style: solid;
     border-width: 2vw;
@@ -120,7 +120,7 @@ ul {
 }
 
 .moodboard {
-    color: white;
+    color: black;
     text-decoration: underline;
     padding-left: 2vw;
 }
