--- a/layout.css
+++ b/layout.css
@@ -40,7 +40,10 @@ h5 {
 
 }
 
-
+.bg {
+	background-image: url(img_byg/bg_2.png);
+	background-repeat: no-repeat;
+}
 
 a {
 
@@ -292,12 +295,21 @@ blockquote cite:before {
 
 .scrum {
 	height: 100%;
-	width: 10%;
+	width: 12%;
 	text-decoration: none;
 	color: black;
 	border: white;
 	border-style: solid;
 	border-width: 2vw;
+	overflow: hidden;
+}
+
+.scrum_text {
+	font-family: 'Montserrat', sans-serif;
+	font-size: 0.7em;
+	font-weight: 700;
+	text-align: center;
+	color: #82b678;
 }
 
 /*MOODBOARD*/
