--- a/layout.css
+++ b/layout.css
@@ -337,37 +337,37 @@ blockquote cite:before {
 /****************************UI KIT*/
 
 #kits {
-	margin: 0 10vw;
-	display: flex;
-	flex-wrap: wrap;
+    margin: 0 10vw;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 #kits2 {
-	margin: 0 10vw;
-	display: flex;
-	flex-wrap: wrap;
+    margin: 0 10vw;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 #ui_eksempler {
-	width: 100%;
-	height: 50%;
+    width: 100%;
+    height: 50%;
 }
 
 #ui_kit {
-	width: 100%;
-	height: 50%;
+    width: 100%;
+    height: 50%;
 }
 
 .eks1 {
-	width: 40%;
-	height: 40%;
-	padding: 2% 2%;
+    width: 40%;
+    height: 40%;
+    padding: 2% 2%;
 }
 
 .brugt {
-	width: 40%;
-	height: 40%;
-	padding: 2% 2%;
+    width: 40%;
+    height: 40%;
+    padding: 2% 2%;
 }
 
 /*MOODBOARD*/
@@ -483,4 +483,88 @@ blockquote cite:before {
     background-position: center;
     width: 100vw;
     height: 9.09vw;
+}
+
+
+/*Præsentationssite*/
+
+#front {
+    background-color: white;
+}
+
+#frontbaggrund {
+    background-image: url(forside/baggrund.png);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: top;
+    width: 100vw;
+    height: 56.25vw;
+}
+
+#profil_container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#profil1 {
+    width: 150px;
+    height: 150px;
+    background-image: url(img_pitch/malou.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 135%;
+    filter: grayscale(100%);
+    border-radius: 50px;
+    border-radius: 50px;
+    border-radius: 50px;
+    margin-left: 60px;
+    margin-top: 10px;
+}
+
+#profil2 {
+    width: 150px;
+    height: 150px;
+    background-image: url(img_pitch/mateo.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100%;
+    filter: grayscale(100%);
+    border-radius: 50px;
+    border-radius: 50px;
+    border-radius: 50px;
+    margin-left: 240px;
+    margin-top: 10px;
+
+}
+
+#profil3 {
+    width: 150px;
+    height: 150px;
+    background-image: url(img_pitch/josefine.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    filter: grayscale(100%);
+    background-size: 100%;
+    border-radius: 50px;
+    border-radius: 50px;
+    border-radius: 50px;
+    margin-left: 240px;
+    margin-top: 10px;
+
+}
+
+#profil4 {
+    width: 150px;
+    height: 150px;
+    background-image: url(img_pitch/rasmus.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100%;
+    filter: grayscale(100%);
+    border-radius: 50px;
+    border-radius: 50px;
+    border-radius: 50px;
+    margin-left: 240px;
+    margin-top: 10px;
+
 }
