--- a/layout.css
+++ b/layout.css
@@ -1,113 +1,113 @@
 body {
-	margin: 0 auto;
-	padding: 0;
+    margin: 0 auto;
+    padding: 0;
 }
 
 #forside {
-	background-color: white;
+    background-color: white;
 }
 
 #baggrund {
-	background-image: url(forside/baggrund.png);
-	background-size: 100%;
-	background-repeat: no-repeat;
-	background-position: top;
-	width: 100vw;
-	height: 56.25vw;
+    background-image: url(forside/baggrund.png);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: top;
+    width: 100vw;
+    height: 56.25vw;
 }
 
 h1 {
-	font-family: 'Montserrat', sans-serif;
-	font-size: 1.4rem;
-	font-weight: 400;
-	padding-bottom: 3vw;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.4rem;
+    font-weight: 400;
+    padding-bottom: 3vw;
 
 }
 
 h2 {
-	font-family: 'Montserrat', sans-serif;
-	font-size: 1.2rem;
-	font-weight: 400;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.2rem;
+    font-weight: 400;
 
 }
 
 h3,
 h4,
 h5 {
-	font-family: 'Montserrat', sans-serif;
-	font-weight: 400;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
 
 
 }
 
 .bg {
-	background-image: url(img_byg/bg_2.png);
-	background-repeat: no-repeat;
+    background-image: url(img_byg/bg_2.png);
+    background-repeat: no-repeat;
 }
 
 a {
 
-	text-decoration: none;
-	font-family: 'Montserrat', sans-serif;
-	font-size: 1.4rem;
-	font-weight: 400;
+    text-decoration: none;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.4rem;
+    font-weight: 400;
 }
 
 h2 {
-	font-family: 'Montserrat', sans-serif;
-	font-size: 1.2rem;
-	font-weight: 400;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.2rem;
+    font-weight: 400;
 }
 
 p {
-	font-family: 'Montserrat', sans-serif;
-	font-size: 1rem;
-	font-weight: 200;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1rem;
+    font-weight: 200;
 }
 
 #change,
 h2 {
 
-	color: black;
-	padding-left: 10vw;
-	padding-right: 10vw;
+    color: black;
+    padding-left: 10vw;
+    padding-right: 10vw;
 
 }
 
 
 
 nav {
-	width: 100vw;
-	height: 100%;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: left;
-	align-content: center;
-	background-color: #DC648D;
-	padding: 5px;
+    width: 100vw;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: left;
+    align-content: center;
+    background-color: #DC648D;
+    padding: 5px;
 }
 
 nav a {
-	font-family: 'Montserrat', sans-serif;
-	font-size: 1rem;
-	font-weight: 300;
-	text-decoration: none;
-	color: white;
-	padding: 7px;
-	border-right: solid 1px white;
-	font-weight: bold;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1rem;
+    font-weight: 300;
+    text-decoration: none;
+    color: white;
+    padding: 7px;
+    border-right: solid 1px white;
+    font-weight: bold;
 }
 
 .none {
-	border: none;
+    border: none;
 }
 
 ul {
 
-	font-family: 'Montserrat', sans-serif;
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
+    font-family: 'Montserrat', sans-serif;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 
 }
 
@@ -115,185 +115,185 @@ ul {
 
 #persona {
 
-	margin-top: 5vw;
-	margin: 0 10vw;
+    margin-top: 5vw;
+    margin: 0 10vw;
 }
 
 .persona {
-	font-family: 'Montserrat', sans-serif;
-	font-size: 1em;
-	font-weight: 300;
-	background-color: white;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1em;
+    font-weight: 300;
+    background-color: white;
 
-	padding: 1vw 0;
+    padding: 1vw 0;
 }
 
 .persona_img {
-	box-sizing: border-box;
-	width: 30%;
-	float: right;
+    box-sizing: border-box;
+    width: 30%;
+    float: right;
 }
 
 #prototype {
-	margin: 8vw 10vw;
+    margin: 8vw 10vw;
 
 }
 
 .prototype {
-	font-family: 'Montserrat', sans-serif;
-	font-size: 1em;
-	font-weight: 300;
-	background-color: white;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1em;
+    font-weight: 300;
+    background-color: white;
 
-	padding: 1vw 0;
+    padding: 1vw 0;
 }
 
 #kea_schedule {
 
-	margin: 5vw 10vw;
+    margin: 5vw 10vw;
 }
 
 blockquote {
-	font-family: 'Montserrat', sans-serif;
-	font-size: 20px;
-	font-style: italic;
-	width: 500px;
-	background-color: white;
-	padding: 1.25em 0;
-	line-height: 1.45;
-	position: relative;
-	color: #82b678;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+    font-style: italic;
+    width: 500px;
+    background-color: white;
+    padding: 1.25em 0;
+    line-height: 1.45;
+    position: relative;
+    color: #82b678;
 
 }
 
 blockquote:before {
-	display: block;
-	content: "\201C";
-	font-size: 80px;
-	position: absolute;
-	left: -36px;
-	top: -14px;
-	color: #7a7a7a;
+    display: block;
+    content: "\201C";
+    font-size: 80px;
+    position: absolute;
+    left: -36px;
+    top: -14px;
+    color: #7a7a7a;
 }
 
 
 
 blockquote cite {
-	color: #999999;
-	font-size: 14px;
-	display: block;
-	margin-top: 5px;
+    color: #999999;
+    font-size: 14px;
+    display: block;
+    margin-top: 5px;
 }
 
 blockquote cite:before {
-	content: "\2014 \2009";
+    content: "\2014 \2009";
 }
 
 .schedule_prototype {
-	font-family: 'Montserrat', sans-serif;
-	font-size: 1em;
-	font-weight: 300;
-	background-color: white;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1em;
+    font-weight: 300;
+    background-color: white;
 
-	padding: 1vw 0;
+    padding: 1vw 0;
 }
 
 .painPointSchedule {
-	font-family: 'Montserrat', sans-serif;
-	font-size: 1em;
-	font-weight: 500;
-	background-color: white;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1em;
+    font-weight: 500;
+    background-color: white;
 
-	padding: 1vw 0;
+    padding: 1vw 0;
 }
 
 #kea_unite {
 
-	margin: 5vw 10vw;
+    margin: 5vw 10vw;
 }
 
 #img_prototype {
-	flex-wrap: wrap;
-	display: flex;
-	justify-content: center;
-	padding-top: 5vw;
-	padding-bottom: 5vw;
+    flex-wrap: wrap;
+    display: flex;
+    justify-content: center;
+    padding-top: 5vw;
+    padding-bottom: 5vw;
 }
 
 .unite_img {
-	width: 20%;
-	height: 40%;
+    width: 20%;
+    height: 40%;
 
 }
 
 .unite_img_rotate {
-	width: 20%;
-	height: 40%;
-	transform: rotate(-90deg);
+    width: 20%;
+    height: 40%;
+    transform: rotate(-90deg);
 }
 
 #kea_tutor {
-	margin: 5vw 10vw;
+    margin: 5vw 10vw;
 }
 
 #endelig_test {
-	margin: 5vw 10vw;
-	display: flex;
-	flex-wrap: wrap;
-	/*	width: 20%;*/
-	height: 40%;
+    margin: 5vw 10vw;
+    display: flex;
+    flex-wrap: wrap;
+    /*	width: 20%;*/
+    height: 40%;
 }
 
 .endelig_paper_test {
-	height: 100%;
-	width: 40%;
-	text-decoration: none;
-	color: black;
-	border: white;
-	border-style: solid;
-	border-width: 2vw;
-	overflow: hidden;
+    height: 100%;
+    width: 40%;
+    text-decoration: none;
+    color: black;
+    border: white;
+    border-style: solid;
+    border-width: 2vw;
+    overflow: hidden;
 }
 
 .endelig_app_test {
-	height: 100%;
-	width: 40%;
-	text-decoration: none;
-	color: black;
-	border: white;
-	border-style: solid;
-	border-width: 2vw;
-	overflow: hidden;
+    height: 100%;
+    width: 40%;
+    text-decoration: none;
+    color: black;
+    border: white;
+    border-style: solid;
+    border-width: 2vw;
+    overflow: hidden;
 }
 
 #features {
-	margin: 5vw 10vw;
+    margin: 5vw 10vw;
 
 }
 
 .login {
-	padding: 2% 0 2% 0;
-	background-color: white;
+    padding: 2% 0 2% 0;
+    background-color: white;
 }
 
 .menu {
-	padding-bottom: 2%;
-	background-color: white;
+    padding-bottom: 2%;
+    background-color: white;
 }
 
 .profil {
-	padding-bottom: 2%;
-	background-color: white;
+    padding-bottom: 2%;
+    background-color: white;
 }
 
 .chat {
-	padding-bottom: 2%;
-	background-color: white;
+    padding-bottom: 2%;
+    background-color: white;
 }
 
 .feed {
-	padding-bottom: 2%;
-	background-color: white;
+    padding-bottom: 2%;
+    background-color: white;
 }
 
 
@@ -308,89 +308,89 @@ blockquote cite:before {
 
 #scrum_body {
 
-	width: 100vw;
-	height: 100vw;
-	background-repeat: no-repeat;
+    width: 100vw;
+    height: 100vw;
+    background-repeat: no-repeat;
 
-	position: relative;
+    position: relative;
 
 }
 
 
 #video_scrum {
-	flex-wrap: wrap;
-	display: flex;
-	position: absolute;
-	height: 100%;
-	justify-content: left;
+    flex-wrap: wrap;
+    display: flex;
+    position: absolute;
+    height: 100%;
+    justify-content: left;
 
 }
 
 .scrum {
 
-	height: 100%;
-	width: 12%;
-	text-decoration: none;
-	color: black;
-	border: white;
-	border-style: solid;
-	border-width: 2vw;
-	overflow: hidden;
+    height: 100%;
+    width: 12%;
+    text-decoration: none;
+    color: black;
+    border: white;
+    border-style: solid;
+    border-width: 2vw;
+    overflow: hidden;
 }
 
 .scrum_text {
-	font-family: 'Montserrat', sans-serif;
-	font-size: 0.7em;
-	font-weight: 700;
-	text-align: center;
-	color: #82b678;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 0.7em;
+    font-weight: 700;
+    text-align: center;
+    color: #82b678;
 
 }
 
 /**********************SKITSER*/
 
 #skitser {
-	margin: 0 10vw;
-	margin-bottom: 5vw;
+    margin: 0 10vw;
+    margin-bottom: 5vw;
 
 }
 
 .img_rotate {
-	transform: rotate(90deg);
-	width: 15vw;
-	height: 15vw;
-	padding-left: 2%;
+    transform: rotate(90deg);
+    width: 15vw;
+    height: 15vw;
+    padding-left: 2%;
 }
 
 .img_ok {
-	width: 15vw;
-	height: 15vw;
-	padding-left: 2%;
+    width: 15vw;
+    height: 15vw;
+    padding-left: 2%;
 }
 
 .img_malou {
-	transform: rotate(90deg);
-	width: 15vw;
-	height: 15vw;
-	padding-left: 2%;
+    transform: rotate(90deg);
+    width: 15vw;
+    height: 15vw;
+    padding-left: 2%;
 }
 
 /************************APP IKON*/
 
 #app_ikon {
-	margin: 0 10vw;
-	flex-wrap: wrap;
-	display: flex;
-	justify-content: space-evenly;
+    margin: 0 10vw;
+    flex-wrap: wrap;
+    display: flex;
+    justify-content: space-evenly;
 }
 
 .app_ikon {
-	width: 25%;
-	height: 25%;
+    width: 25%;
+    height: 25%;
 }
 
 .app_ikon_final {
-	width: 200px;
+    width: 200px;
 
 
 }
@@ -398,18 +398,18 @@ blockquote cite:before {
 /*MOODBOARD*/
 
 #moodboard {
-	background-image: url(moodboard/moodboard.png);
-	background-size: 100%;
-	background-repeat: no-repeat;
-	background-position: center;
-	width: 100vw;
-	height: 56.25vw;
+    background-image: url(moodboard/moodboard.png);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100vw;
+    height: 56.25vw;
 }
 
 .moodboard {
-	color: black;
-	text-decoration: underline;
-	padding-left: 10vw;
+    color: black;
+    text-decoration: underline;
+    padding-left: 10vw;
 }
 
 /****************************UI KIT*/
@@ -451,116 +451,116 @@ blockquote cite:before {
 /*MOODBOARD*/
 
 #styletile {
-	background-image: url(styletile/styletile.png);
-	background-size: 100%;
-	background-repeat: no-repeat;
-	background-position: center;
-	width: 100vw;
-	height: 56.25vw;
+    background-image: url(styletile/styletile.png);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100vw;
+    height: 56.25vw;
 }
 
 /*Experience Map*/
 
 #schedule {
-	background-image: url(experience/kea_schedule.jpg);
-	background-size: 100%;
-	background-repeat: no-repeat;
-	background-position: center;
-	width: 100vw;
-	height: 100vw;
-	transform: rotate(90deg);
+    background-image: url(experience/kea_schedule.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100vw;
+    height: 100vw;
+    transform: rotate(90deg);
 }
 
 #unite {
 
-	background-image: url(experience/kea_unite.jpg);
-	background-size: 100%;
-	background-repeat: no-repeat;
-	background-position: center;
-	width: 100vw;
-	height: 100vw;
-	transform: rotate(90deg);
+    background-image: url(experience/kea_unite.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100vw;
+    height: 100vw;
+    transform: rotate(90deg);
 }
 
 #tutor {
-	background-image: url(experience/kea_tutor.jpg);
-	background-size: 100%;
-	background-repeat: no-repeat;
-	background-position: center;
-	width: 100vw;
-	height: 100vw;
-	transform: rotate(90deg);
+    background-image: url(experience/kea_tutor.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100vw;
+    height: 100vw;
+    transform: rotate(90deg);
 }
 
 /*Storyboard*/
 
 #storyboard_schedule {
-	background-image: url(storyboard/kea_schedule_storyboard/kea_schedule.jpg);
-	background-size: 100%;
-	background-repeat: no-repeat;
-	background-position: center;
-	width: 100vw;
-	height: 133.333vw;
+    background-image: url(storyboard/kea_schedule_storyboard/kea_schedule.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100vw;
+    height: 133.333vw;
 }
 
 #storyboard_tutor {
-	background-image: url(storyboard/kea_tutor_storyboard/kea_tutor.jpg);
-	background-size: 100%;
-	background-repeat: no-repeat;
-	background-position: center;
-	width: 100vw;
-	height: 133.333vw;
+    background-image: url(storyboard/kea_tutor_storyboard/kea_tutor.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100vw;
+    height: 133.333vw;
 }
 
 #storyboard_unite1 {
-	background-image: url(storyboard/kea_unite_storyboard/kea_unite1.jpg);
-	background-size: 100%;
-	background-repeat: no-repeat;
-	background-position: center;
-	width: 100vw;
-	height: 75vw;
+    background-image: url(storyboard/kea_unite_storyboard/kea_unite1.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100vw;
+    height: 75vw;
 }
 
 #storyboard_unite2 {
-	background-image: url(storyboard/kea_unite_storyboard/kea_unite2.jpg);
-	background-size: 100%;
-	background-repeat: no-repeat;
-	background-position: center;
-	width: 100vw;
-	height: 75vw;
+    background-image: url(storyboard/kea_unite_storyboard/kea_unite2.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100vw;
+    height: 75vw;
 }
 
 #storyboard_unite3 {
-	background-image: url(storyboard/kea_unite_storyboard/kea_unite3.jpg);
-	background-size: 100%;
-	background-repeat: no-repeat;
-	background-position: center;
-	width: 100vw;
-	height: 75vw;
+    background-image: url(storyboard/kea_unite_storyboard/kea_unite3.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100vw;
+    height: 75vw;
 }
 
 
 /*Forretningsmodel*/
 
 #forretning {
-	background-image: url(forretningsmodel/Doing%20Business.png);
-	background-size: 100%;
-	background-repeat: no-repeat;
-	background-position: center;
-	width: 50vw;
-	height: 45.6vw;
+    background-image: url(forretningsmodel/Doing%20Business.png);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 50vw;
+    height: 45.6vw;
 
 }
 
 /*Benchmarking*/
 
 #benchmarking {
-	background-image: url(Benchmarking/Screen%20Shot%202017-11-28%20at%2012.39.11.png);
-	background-size: 100%;
-	background-repeat: no-repeat;
-	background-position: center;
-	width: 100vw;
-	height: 9.09vw;
+    background-image: url(Benchmarking/Screen%20Shot%202017-11-28%20at%2012.39.11.png);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100vw;
+    height: 9.09vw;
 }
 
 
@@ -582,6 +582,7 @@ blockquote cite:before {
 #profil_container {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 #profil1 {
@@ -595,7 +596,6 @@ blockquote cite:before {
     border-radius: 50px;
     border-radius: 50px;
     border-radius: 50px;
-    margin-left: 60px;
     margin-top: 10px;
 }
 
@@ -610,7 +610,6 @@ blockquote cite:before {
     border-radius: 50px;
     border-radius: 50px;
     border-radius: 50px;
-    margin-left: 240px;
     margin-top: 10px;
 
 }
@@ -626,7 +625,6 @@ blockquote cite:before {
     border-radius: 50px;
     border-radius: 50px;
     border-radius: 50px;
-    margin-left: 240px;
     margin-top: 10px;
 
 }
@@ -642,7 +640,59 @@ blockquote cite:before {
     border-radius: 50px;
     border-radius: 50px;
     border-radius: 50px;
-    margin-left: 240px;
     margin-top: 10px;
 
+}
+
+#profil_tekst_container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+#tekst1 {
+
+    margin-top: 10px;
+    text-align: center;
+}
+
+#tekst2 {
+
+    margin-top: 10px;
+    text-align: center;
+
+}
+
+#tekst3 {
+
+    margin-top: 10px;
+    text-align: center;
+
+}
+
+#tekst4 {
+
+    margin-top: 10px;
+    text-align: center;
+
+}
+
+#intro_af_app {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#flottefyr_img {
+    margin: 25px 0 100px auto;
+    width: 500px;
+    height: 500px;
+    background-image: url(img_pitch/Bo.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+
+}
+
+#tekst_fyr {
+    margin: 40px auto 100px 20px;
+    line-height: 90px;
 }
