--- a/layout.css
+++ b/layout.css
@@ -76,7 +76,8 @@ h2 {
 
 
 
-nav {
+nav,
+#stor_nav {
 	width: 100vw;
 	height: 100%;
 	display: flex;
@@ -85,9 +86,12 @@ nav {
 	align-content: center;
 	background-color: #DC648D;
 	padding: 5px;
+	margin-top: 0vw;
+	margin-left: 0vw;
 }
 
-nav a {
+nav a,
+#stor_nav_a {
 	font-family: 'Montserrat', sans-serif;
 	font-size: 1rem;
 	font-weight: 300;
@@ -415,37 +419,37 @@ blockquote cite:before {
 /****************************UI KIT*/
 
 #kits {
-    margin: 0 10vw;
-    display: flex;
-    flex-wrap: wrap;
+	margin: 0 10vw;
+	display: flex;
+	flex-wrap: wrap;
 }
 
 #kits2 {
-    margin: 0 10vw;
-    display: flex;
-    flex-wrap: wrap;
+	margin: 0 10vw;
+	display: flex;
+	flex-wrap: wrap;
 }
 
 #ui_eksempler {
-    width: 100%;
-    height: 50%;
+	width: 100%;
+	height: 50%;
 }
 
 #ui_kit {
-    width: 100%;
-    height: 50%;
+	width: 100%;
+	height: 50%;
 }
 
 .eks1 {
-    width: 40%;
-    height: 40%;
-    padding: 2% 2%;
+	width: 40%;
+	height: 40%;
+	padding: 2% 2%;
 }
 
 .brugt {
-    width: 40%;
-    height: 40%;
-    padding: 2% 2%;
+	width: 40%;
+	height: 40%;
+	padding: 2% 2%;
 }
 
 /*MOODBOARD*/
@@ -567,82 +571,114 @@ blockquote cite:before {
 /*Præsentationssite*/
 
 #front {
-    background-color: white;
+	background-color: white;
 }
 
 #frontbaggrund {
-    background-image: url(forside/baggrund.png);
-    background-size: 100%;
-    background-repeat: no-repeat;
-    background-position: top;
-    width: 100vw;
-    height: 56.25vw;
+	background-image: url(forside/baggrund.png);
+	background-size: 100%;
+	background-repeat: no-repeat;
+	background-position: top;
+	width: 100vw;
+	height: 56.25vw;
 }
 
 #profil_container {
-    display: flex;
-    flex-wrap: wrap;
+	display: flex;
+	flex-wrap: wrap;
+	margin-top: 20vw;
 }
 
 #profil1 {
-    width: 150px;
-    height: 150px;
-    background-image: url(img_pitch/malou.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 135%;
-    filter: grayscale(100%);
-    border-radius: 50px;
-    border-radius: 50px;
-    border-radius: 50px;
-    margin-left: 60px;
-    margin-top: 10px;
+	width: 150px;
+	height: 150px;
+	background-image: url(img_pitch/malou.jpg);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 135%;
+	filter: grayscale(100%);
+	border-radius: 50px;
+	border-radius: 50px;
+	border-radius: 50px;
+	margin-left: 60px;
+	margin-top: 10px;
 }
 
 #profil2 {
-    width: 150px;
-    height: 150px;
-    background-image: url(img_pitch/mateo.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 100%;
-    filter: grayscale(100%);
-    border-radius: 50px;
-    border-radius: 50px;
-    border-radius: 50px;
-    margin-left: 240px;
-    margin-top: 10px;
+	width: 150px;
+	height: 150px;
+	background-image: url(img_pitch/mateo.jpg);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 100%;
+	filter: grayscale(100%);
+	border-radius: 50px;
+	border-radius: 50px;
+	border-radius: 50px;
+	margin-left: 240px;
+	margin-top: 10px;
 
 }
 
 #profil3 {
-    width: 150px;
-    height: 150px;
-    background-image: url(img_pitch/josefine.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    filter: grayscale(100%);
-    background-size: 100%;
-    border-radius: 50px;
-    border-radius: 50px;
-    border-radius: 50px;
-    margin-left: 240px;
-    margin-top: 10px;
+	width: 150px;
+	height: 150px;
+	background-image: url(img_pitch/josefine.jpg);
+	background-repeat: no-repeat;
+	background-position: center;
+	filter: grayscale(100%);
+	background-size: 100%;
+	border-radius: 50px;
+	border-radius: 50px;
+	border-radius: 50px;
+	margin-left: 240px;
+	margin-top: 10px;
 
 }
 
 #profil4 {
-    width: 150px;
-    height: 150px;
-    background-image: url(img_pitch/rasmus.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 100%;
-    filter: grayscale(100%);
-    border-radius: 50px;
-    border-radius: 50px;
-    border-radius: 50px;
-    margin-left: 240px;
-    margin-top: 10px;
+	width: 150px;
+	height: 150px;
+	background-image: url(img_pitch/rasmus.jpg);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 100%;
+	filter: grayscale(100%);
+	border-radius: 50px;
+	border-radius: 50px;
+	border-radius: 50px;
+	margin-left: 240px;
+	margin-top: 10px;
 
+}
+
+nav,
+#mini_nav {
+	font-family: 'Montserrat', sans-serif;
+	font-size: 1rem;
+	font-weight: 300;
+	text-decoration: none;
+	background-color: white;
+	margin-top: -330px;
+	justify-content: center;
+	background-color: transparent;
+	position: sticky;
+	top: 0;
+	z-index: 5;
+}
+
+nav a,
+#mini_nav_a {
+	font-family: 'Montserrat', sans-serif;
+	font-size: 1rem;
+	font-weight: 300;
+	text-decoration: none;
+	color: #f9c18f;
+	padding: 10px;
+	font-weight: bold;
+	border-right: none;
+}
+
+#guide {
+	margin: 60px 60px;
 }
