--- a/layout.css
+++ b/layout.css
@@ -732,10 +732,71 @@ nav a,
     line-height: 90px;
 }
 
+#forklaring_af_app {
+    margin: 0 auto;
+    padding: 0;
+    max-width: 1280px;
+    height: 400px;
+}
+
+#kea_unite_ikon {
+    margin: 0 auto;
+    padding: 0;
+    width: 30vw;
+    height: 30vw;
+    background-image: url(img_pitch/kea_unite_logo_1.svg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
+#afdelinger_tekst {
+    position: relative;
+}
+
+#design {
+    font-family: "Montserrat-light";
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    position: absolute;
+    left: 26vw;
+    top: 5vw;
+}
+
+#digital {
+    font-family: "Montserrat-light";
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    position: absolute;
+    left: 67vw;
+    top: 5vw;
+}
+
+#teknik {
+    font-family: "Montserrat-light";
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    position: absolute;
+    left: 27vw;
+    top: 25vw;
+}
+
+#byg {
+    font-family: "Montserrat-light";
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    position: absolute;
+    left: 66.5vw;
+    top: 25vw;
+}
+
+
+
+
 #benefits_container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    margin-top: 300px;
 }
 
 #menuen1 {
